outputs_20260327-054203-73cd0a5f/codegen/production/build_logs/compiler_stderr.log
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c: In function 'interruptGtm_TomAtom':
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:78:5: error: implicit declaration of function 'IfxPort_togglePin' [-Wimplicit-function-declaration]
   78 |     IfxPort_togglePin(LED);
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTomPwm':
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:127:31: error: 'IfxGtm_Tom_Ch_ClkSrc_cmuFxclk0' undeclared (first use in this function); did you mean 'IfxGtm_Tom_Ch_ClkSrc_cmuFxclk'?
  127 |     timerCfg.clock          = IfxGtm_Tom_Ch_ClkSrc_cmuFxclk0;
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                               IfxGtm_Tom_Ch_ClkSrc_cmuFxclk
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:127:31: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:130:18: error: 'IfxStdIf_Timer_Config' has no member named 'isrPriority'
  130 |     timerCfg.base.isrPriority = ISR_PRIORITY_ATOM;
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:131:18: error: 'IfxStdIf_Timer_Config' has no member named 'isrProvider'
  131 |     timerCfg.base.isrProvider = IfxSrc_Tos_cpu0;
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:38:42: error: 'IfxGtm_TOM1_2_TOUT12_P00_3_OUT' undeclared (first use in this function)
   38 | #define PHASE_U_HS                      &IfxGtm_TOM1_2_TOUT12_P00_3_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:140:64: note: in expansion of macro 'PHASE_U_HS'
  140 |     static const IfxGtm_Tom_ToutMapP ccx[NUM_OF_CHANNELS]  = { PHASE_U_HS, PHASE_V_HS, PHASE_W_HS };
      |                                                                ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:40:42: error: 'IfxGtm_TOM1_4_TOUT14_P00_5_OUT' undeclared (first use in this function)
   40 | #define PHASE_V_HS                      &IfxGtm_TOM1_4_TOUT14_P00_5_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:140:76: note: in expansion of macro 'PHASE_V_HS'
  140 |     static const IfxGtm_Tom_ToutMapP ccx[NUM_OF_CHANNELS]  = { PHASE_U_HS, PHASE_V_HS, PHASE_W_HS };
      |                                                                            ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:42:42: error: 'IfxGtm_TOM1_6_TOUT16_P00_7_OUT' undeclared (first use in this function)
   42 | #define PHASE_W_HS                      &IfxGtm_TOM1_6_TOUT16_P00_7_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:140:88: note: in expansion of macro 'PHASE_W_HS'
  140 |     static const IfxGtm_Tom_ToutMapP ccx[NUM_OF_CHANNELS]  = { PHASE_U_HS, PHASE_V_HS, PHASE_W_HS };
      |                                                                                        ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:39:42: error: 'IfxGtm_TOM1_1_TOUT11_P00_2_OUT' undeclared (first use in this function)
   39 | #define PHASE_U_LS                      &IfxGtm_TOM1_1_TOUT11_P00_2_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:141:65: note: in expansion of macro 'PHASE_U_LS'
  141 |     static const IfxGtm_Tom_ToutMapP coutx[NUM_OF_CHANNELS] = { PHASE_U_LS, PHASE_V_LS, PHASE_W_LS };
      |                                                                 ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:41:42: error: 'IfxGtm_TOM1_3_TOUT13_P00_4_OUT' undeclared (first use in this function)
   41 | #define PHASE_V_LS                      &IfxGtm_TOM1_3_TOUT13_P00_4_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:141:77: note: in expansion of macro 'PHASE_V_LS'
  141 |     static const IfxGtm_Tom_ToutMapP coutx[NUM_OF_CHANNELS] = { PHASE_U_LS, PHASE_V_LS, PHASE_W_LS };
      |                                                                             ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:43:42: error: 'IfxGtm_TOM1_5_TOUT15_P00_6_OUT' undeclared (first use in this function)
   43 | #define PHASE_W_LS                      &IfxGtm_TOM1_5_TOUT15_P00_6_OUT
      |                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:141:89: note: in expansion of macro 'PHASE_W_LS'
  141 |     static const IfxGtm_Tom_ToutMapP coutx[NUM_OF_CHANNELS] = { PHASE_U_LS, PHASE_V_LS, PHASE_W_LS };
      |                                                                                         ^~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:153:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'channelCount'
  153 |     pwmhlCfg.base.channelCount     = NUM_OF_CHANNELS;      /* 3 pairs */
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:154:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'deadtime'
  154 |     pwmhlCfg.base.deadtime         = PWM_DEADTIME_US * 1e-6f;   /* seconds */
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:155:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'minPulse'
  155 |     pwmhlCfg.base.minPulse         = PWM_MIN_PULSE_US * 1e-6f;  /* seconds */
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:156:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'outputMode'
  156 |     pwmhlCfg.base.outputMode       = IfxPort_OutputMode_pushPull;
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:157:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'padDriver'
  157 |     pwmhlCfg.base.padDriver        = IfxPort_PadDriver_cmosAutomotiveSpeed1;
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:158:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'ccxActiveState'
  158 |     pwmhlCfg.base.ccxActiveState   = Ifx_ActiveState_high; /* high-side active high */
      |                  ^
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\src\gtm_tom_3_phase_inverter_pwm.c:159:18: error: 'IfxStdIf_PwmHl_Config' has no member named 'coutxActiveState'
  159 |     pwmhlCfg.base.coutxActiveState = Ifx_ActiveState_high; /* low-side  active high */
      |                  ^

C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_TC_G4_002_update_multiple_calls_increment_counts':
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\test\test_gtm_tom_3_phase_inverter_pwm.c:161:28: error: implicit declaration of function 'mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount'; did you mean 'mock_IfxGtm_Tom_Timer_applyUpdate_getCallCount'? [-Wimplicit-function-declaration]
  161 |     uint32_t pre_apply   = mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount(); /* Intentionally incorrect to ensure using available getter - corrected below */
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                            mock_IfxGtm_Tom_Timer_applyUpdate_getCallCount
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\test\test_gtm_tom_3_phase_inverter_pwm.c:161:14: error: unused variable 'pre_apply' [-Werror=unused-variable]
  161 |     uint32_t pre_apply   = mock_IfxGtm_Tom_Tomer_applyUpdate_getCallCount(); /* Intentionally incorrect to ensure using available getter - corrected below */
      |              ^~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\test\test_gtm_tom_3_phase_inverter_pwm.c:160:14: error: unused variable 'pre_set' [-Werror=unused-variable]
  160 |     uint32_t pre_set     = mock_IfxGtm_Tom_PwmHl_setOnTime_getCallCount();
      |              ^~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_t84yed3c\test\test_gtm_tom_3_phase_inverter_pwm.c:159:14: error: unused variable 'pre_disable' [-Werror=unused-variable]
  159 |     uint32_t pre_disable = mock_IfxGtm_Tom_Timer_disableUpdate_getCallCount();
      |              ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
